--- a/C0722227_MidTerm_MAD3115F2019/Base.lproj/Main.storyboard
+++ b/C0722227_MidTerm_MAD3115F2019/Base.lproj/Main.storyboard
@@ -62,6 +62,7 @@
                         <barButtonItem key="rightBarButtonItem" title="Log In" id="rvR-PD-3tu">
                             <connections>
                                 <action selector="Login:" destination="BYZ-38-t0r" id="rvB-oW-nqZ"/>
+                                <segue destination="zzf-m0-z4j" kind="show" id="FVd-69-CA7"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
