--- a/C0722227_MidTerm_MAD3115F2019/Base.lproj/Main.storyboard
+++ b/C0722227_MidTerm_MAD3115F2019/Base.lproj/Main.storyboard
@@ -40,7 +40,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9Kx-6Q-3rb">
                                 <rect key="frame" x="57" y="472" width="49" height="31"/>
@@ -62,7 +62,6 @@
                         <barButtonItem key="rightBarButtonItem" title="Log In" id="rvR-PD-3tu">
                             <connections>
                                 <action selector="Login:" destination="BYZ-38-t0r" id="rvB-oW-nqZ"/>
-                                <segue destination="zzf-m0-z4j" kind="show" id="FVd-69-CA7"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -79,10 +78,22 @@
         <!--Customer-->
         <scene sceneID="gpx-eq-s9M">
             <objects>
-                <viewController id="zzf-m0-z4j" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CustVC" id="zzf-m0-z4j" customClass="CustomerListTableViewController" customModule="C0722227_MidTerm_MAD3115F2019" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="psn-eB-hvP">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xgy-hm-iw1">
+                                <rect key="frame" x="0.0" y="44" width="394" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Customer" id="bGh-2v-QBW">
+                                        <barButtonItem key="backBarButtonItem" title="Customer" id="qlo-P6-217"/>
+                                        <barButtonItem key="rightBarButtonItem" title="New Customer" id="R4A-6i-M1g"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="aWh-Vv-sTB"/>
                     </view>
@@ -93,7 +104,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CnC-xw-AXE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1784" y="133"/>
+            <point key="canvasLocation" x="1782.608695652174" y="132.58928571428572"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="cwX-Gs-tEy">
